# general-tetrahedralized-volume

./: .#Makefile.am  .gitignore  .gitignore~  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md~  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  log
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
doc/: Makefile  Makefile.in
doc/doxy/: gtv.dxy  gtv.dxy.bak  gtv.dxy~
doc/html/: Makefile  Makefile.in  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  formula.repository  functions.html  functions_vars.html  group__cell.html  group__delaunay.html  group__facet.html  group__geometry.html  group__locate.html  group__logging.html  group__multipole.html  group__octtree.html  group__parent.html  group__quadrature.html  group__status.html  group__tetrahedron.html  group__volume.html  index.html  modules.html  structGtvCell.html  structGtvCellClass.html  structGtvFacet.html  structGtvFacetClass.html  structGtvOctTreeBox.html  structGtvOctTreeBoxClass.html  structGtvQuadratureRule.html  structGtvTetrahedron.html  structGtvTetrahedronClass.html  structGtvVolume.html  structGtvVolumeClass.html  structGtvVolumeQualityStats.html  structGtvVolumeStats.html
doc/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  doxygen.sty  group__cell.tex  group__delaunay.aux  group__delaunay.tex  group__facet.aux  group__facet.tex  group__geometry.aux  group__geometry.tex  group__locate.aux  group__locate.tex  group__logging.aux  group__logging.tex  group__multipole.tex  group__octtree.tex  group__parent.aux  group__parent.tex  group__quadrature.tex  group__status.aux  group__status.tex  group__tetrahedron.aux  group__tetrahedron.tex  group__volume.aux  group__volume.tex  modules.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc  structGtvCell.tex  structGtvCellClass.aux  structGtvCellClass.tex  structGtvFacet.aux  structGtvFacet.tex  structGtvFacetClass.aux  structGtvFacetClass.tex  structGtvOctTreeBox.tex  (+12 more)
examples/: cube.geo  cube.geo~  cube.gtv  cube.msh  sphere.geo  sphere.geo~
inputs/: cube.msh  cube008.gtv  cube008.msh  cube032.dat~  flip23.gtv  flip32.gtv  mkcube.m  mkcube.m~  mkftest.m  mkftest.m~  random16.dat~  random3.dat~  random5.dat~  remove002.dat~
src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  cell.c  delaunay.c  facet.c  geometry.c  gtv-config  gtv-config.in  gtv-logging.c  gtv-private.h  gtv.h  locate.c  matrix.c  parents.c  predicates_init  tetrahedron.c  util.c  volume.c
src/.deps/: cell.Plo  curl.Plo  delaunay.Plo  facet.Plo  gauss.Plo  geometry.Plo  gtv-logging.Plo  locate.Plo  matrix.Plo  moltrumb.Plo  mpole.Plo  multipole.Plo  octtree.Plo  parents.Plo  predicates.Plo  quadrature.Plo  scalar.Plo  tetrahedron.Plo  util.Plo  volume.Plo  wrgtet.Plo
src/.libs/: libgtv.lai
tools/: Makefile  Makefile.am  Makefile.in  gtv-check  gtv-check.c  gtv-cube  gtv-cube.c  gtv-delaunay  gtv-delaunay.c  gtv2msh  gtv2msh.c  msh2gtv  msh2gtv.c
tools/.deps/: gtv-check.Po  gtv-cube.Po  gtv-delaunay.Po  gtv2msh.Po  msh2gtv.Po
